# latest_lab_3

./: README.md  pyproject.toml  requirements.txt
reports/: official_course_report.md  run_report.md
src/nlp_bert_classifier/: __init__.py  cli.py  pipeline.py
src/nlp_bert_classifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_cli.py  test_config.py  test_metrics.py
